# kiters

./: .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.bak  README.md  mise.toml
.beads/: .gitignore  issues.jsonl
benches/: eid_bench.rs  request_id_bench.rs  timestamp_bench.rs
prds/: prd-eid-module-v1-2026-01-13.md  prd-request-id-module-v1-2026-01-13.md  prd-timestamp-module-v1-2026-01-13.md
src/: eid.rs  lib.rs  request_id.rs  timestamp.rs
