[package]
name = "kiters"
version = "0.1.0"
edition = "2024"
description = "A collection of useful Rust functions and utilities."
license = "AGPL-3.0-or-later"
repository = "https://github.com/l1x/kiters"
keywords = ["utils", "timestamp", "kit"]
categories = ["development-tools"]

[dependencies]
time = { version = "0", features = ["formatting", "macros"] }

[dev-dependencies]
criterion = { version = "0", features = ["html_reports"] }

[profile.bench]
lto = "thin"
codegen-units = 8

[profile.dev]
lto = "thin"
codegen-units = 8

[profile.release]
opt-level = "s"  # reduces binary size
debug = "full"  # No one needs an undebuggable release binary
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"  # See split-debuginfo - reduces binary size
lto = true  # reduces binary size
panic = "abort"  # reduces binary size
incremental = true  # Improves re-compile times
codegen-units = 1  # reduces binary size

[profile.profiling]
inherits = "release"  # Use all the optimization settings from the release profile
debug = true  # Include debug info so 'perf' can find function names
split-debuginfo = "off"  # Keep debug info in the binary
strip = false  # Do NOT strip symbols
