[package]
name = "kiters"
version = "0.2.0"
edition = "2024"
description = "Rust utilities: timestamps, request IDs, and external IDs"
license = "AGPL-3.0-or-later"
repository = "https://github.com/l1x/kiters"
keywords = ["utils", "timestamp", "kit"]
categories = ["development-tools"]
exclude = [".agent-prompts", ".beads", "prds"]

[dependencies]
base36 = "0.0.1"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0", features = ["formatting", "macros"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0", features = ["html_reports"] }
nanoid = "0"

[[bench]]
name = "request_id_bench"
harness = false

[[bench]]
name = "eid_bench"
harness = false

[profile.bench]
lto = "thin"
codegen-units = 8

[profile.dev]
lto = "thin"
codegen-units = 8

[profile.release]
opt-level = "s"  # reduces binary size
debug = "full"  # No one needs an undebuggable release binary
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"  # See split-debuginfo - reduces binary size
lto = true  # reduces binary size
panic = "abort"  # reduces binary size
incremental = true  # Improves re-compile times
codegen-units = 1  # reduces binary size

[profile.profiling]
inherits = "release"  # Use all the optimization settings from the release profile
debug = true  # Include debug info so 'perf' can find function names
split-debuginfo = "off"  # Keep debug info in the binary
strip = false  # Do NOT strip symbols
